[gd_scene load_steps=15 format=3 uid="uid://xf4k70n2j544"]

[ext_resource type="PackedScene" uid="uid://bv2v2uaelmy4p" path="res://scenes/entities/enemies/enemy.tscn" id="1_len0i"]
[ext_resource type="Script" uid="uid://sjmpfhafesf7" path="res://scenes/entities/enemies/skeleton_warrior.gd" id="2_1j3fj"]
[ext_resource type="PackedScene" uid="uid://bks0ynvp57mq1" path="res://graphics/characters/skeleton warrior/Skeleton_Warrior.glb" id="2_dnovq"]
[ext_resource type="PackedScene" uid="uid://cqxi7o0pyi1mt" path="res://graphics/weapons/bone.gltf.glb" id="3_1j3fj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pw58p"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dnovq"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_1j3fj"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pw58p"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0gor6"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_c8yq2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h1jgc"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hix4j"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_so814"]
states/Start/position = Vector2(204, 105)
states/idle/node = SubResource("AnimationNodeAnimation_pw58p")
states/idle/position = Vector2(366, 105)
states/walk/node = SubResource("AnimationNodeAnimation_0gor6")
states/walk/position = Vector2(545, 103)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_c8yq2"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_h1jgc"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_hix4j")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_0mgfb"]
graph_offset = Vector2(-380.054, 57.3256)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_dnovq")
nodes/AttackAnimation/position = Vector2(-260, 420)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_1j3fj")
nodes/AttackOneShot/position = Vector2(100, 160)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_so814")
nodes/MoveStateMachine/position = Vector2(-340, 200)
nodes/output/position = Vector2(780, 160)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"output", 0, &"AttackOneShot"]

[node name="SkeletonWarrior" instance=ExtResource("1_len0i")]
script = ExtResource("2_1j3fj")
attack_radius = 1.5

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_pw58p")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../skin")
tree_root = SubResource("AnimationNodeBlendTree_0mgfb")
anim_player = NodePath("../skin/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0

[node name="AttackTimer" parent="Timers" index="0"]
wait_time = 2.5
autostart = true

[node name="skin" parent="." index="3" instance=ExtResource("2_dnovq")]

[node name="Skeleton3D" parent="skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.368275, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.0187554, 0.000613182, -0.00498794, 0.999812)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.585485, -0.246187, -0.722469, 0.273199)
bones/4/scale = Vector3(1, 0.999999, 1)
bones/5/rotation = Quaternion(2.32928e-08, -4.04597e-08, -0.587342, 0.809339)
bones/6/rotation = Quaternion(1.10745e-08, -5.13145e-13, 0.0266581, 0.999645)
bones/7/rotation = Quaternion(-0.167174, -0.689932, -0.0524298, 0.702352)
bones/8/position = Vector3(8.34836e-10, 0.0961252, -0.0575001)
bones/8/rotation = Quaternion(-6.29278e-09, 4.24393e-09, -0.707107, 0.707107)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.255807, 0.369911, 0.831209, 0.326834)
bones/9/scale = Vector3(1, 0.999999, 1)
bones/10/rotation = Quaternion(3.02943e-08, 5.18792e-08, 0.550948, 0.834539)
bones/11/rotation = Quaternion(-7.94255e-09, -1.43988e-08, -0.0266581, 0.999645)
bones/12/rotation = Quaternion(-0.257213, 0.204196, -0.0845048, 0.940747)
bones/13/position = Vector3(-8.34829e-10, 0.0961251, -0.0574999)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.0733346, 0.130489, 0.0124887, 0.988655)
bones/14/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/16/rotation = Quaternion(0.99143, 0.0746818, 0.0406529, 0.0991818)
bones/17/rotation = Quaternion(0.414481, 5.74252e-08, -2.84849e-07, 0.910058)
bones/18/rotation = Quaternion(-0.62592, -0.210435, 0.0655964, 0.74809)
bones/19/rotation = Quaternion(-4.28764e-06, 0.920114, -0.39165, 8.59075e-07)
bones/20/rotation = Quaternion(0.987909, -0.0401747, -0.0125497, 0.149214)
bones/21/rotation = Quaternion(0.447741, -5.9813e-08, 3.12264e-07, 0.894163)
bones/22/rotation = Quaternion(-0.634671, 0.11063, -0.0338569, 0.764073)
bones/23/rotation = Quaternion(1.60588e-07, 0.920121, -0.391634, 3.99051e-07)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/26/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/27/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/27/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/28/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/28/rotation = Quaternion(-0.391084, -6.59362e-08, -5.87716e-08, 0.920355)
bones/29/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/30/rotation = Quaternion(-6.93878e-18, -9.55588e-16, -1.20164e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/38/position = Vector3(0.839842, 0.719866, -0.447558)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.341973, 0.806469, 0.402283)
bones/39/rotation = Quaternion(0.6226, 0.070597, 0.445175, 0.63969)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.350655, 0.820473, 0.28498)
bones/41/rotation = Quaternion(-0.309049, 0.224482, 0.911801, -0.15072)

[node name="Skeleton_Warrior_Helmet" parent="skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999925, -0.0122223, 0.00114465, 0.0122701, 0.997942, -0.0629355, -0.000373021, 0.0629449, 0.998017, 0.0290539, 1.17476, -0.0671017)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="10"]
transform = Transform3D(-0.202104, 0.791849, -0.576305, -0.613588, 0.356263, 0.704688, 0.763323, 0.496035, 0.413868, -0.298747, 0.684972, 0.357414)
bone_name = "handslot.r"
bone_idx = 13

[node name="bone_gltf" parent="skin/Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("3_1j3fj")]
transform = Transform3D(1, 8.52651e-14, -2.84217e-14, -1.42109e-13, 1, -7.45058e-08, 1.77636e-14, 7.45058e-08, 1, -0.0108856, 0.128437, 0.0522298)

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="skin"]
